# proxctl

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
proxctl_py/: __init__.py  __main__.py
src/: lib.rs  main.rs  output.rs  schema.rs
src/api/: client.rs  error.rs  mod.rs  token.rs  types.rs
src/commands/: access.rs  api.rs  backup.rs  ceph.rs  cluster.rs  export.rs  firewall.rs  list_args.rs  mod.rs  node.rs  pool.rs  storage.rs  task.rs
src/commands/apply/: container.rs  diff.rs  firewall.rs  manifest.rs  mod.rs  reconciler.rs  vm.rs
src/commands/container/: config.rs  firewall.rs  lifecycle.rs  migrate.rs  mod.rs  snapshot.rs
src/commands/vm/: agent.rs  cloudinit.rs  config.rs  firewall.rs  lifecycle.rs  migrate.rs  mod.rs  snapshot.rs
